# webbuf

./: AGENTS.md  README.md  audit.md
audits/: 2024-12-audit.md  2025-12-audit.md  README.md
issues/: README.md
issues/0001-post-quantum/: README.md
issues/0002-post-quantum-api-hardening/: README.md
issues/0003-mldsa-hedged-signing/: README.md
issues/0004-hybrid-pq-encryption/: README.md
issues/0005-pin-mlkem-and-scope-docs/: README.md
issues/0006-aad-pq-encryption/: README.md
issues/0007-curve25519-hybrid-pq/: README.md
rs/: Cargo.toml
rs/webbuf/: Cargo.toml  README.md
rs/webbuf/src/: lib.rs
rs/webbuf_aescbc/: Cargo.toml  README.md
rs/webbuf_aesgcm/: Cargo.toml  README.md  wasm-pack-bundler.zsh
rs/webbuf_aesgcm/src/: aesgcm.rs  lib.rs
rs/webbuf_blake3/: Cargo.toml  README.md
rs/webbuf_blake3/src/: lib.rs
rs/webbuf_ed25519/: Cargo.toml
rs/webbuf_ed25519/src/: lib.rs
rs/webbuf_mldsa/: Cargo.toml
rs/webbuf_mldsa/src/: lib.rs
rs/webbuf_mlkem/: Cargo.toml  wasm-pack-bundler.zsh
rs/webbuf_mlkem/src/: lib.rs
rs/webbuf_p256/: Cargo.toml  README.md
rs/webbuf_p256/src/: lib.rs  p256_curve.rs
rs/webbuf_pbkdf2_sha256/: Cargo.toml  LICENSE  README.md
rs/webbuf_pbkdf2_sha256/src/: lib.rs  pbkdf2_sha256.rs
rs/webbuf_ripemd160/: Cargo.toml  README.md
rs/webbuf_secp256k1/: Cargo.toml  README.md
rs/webbuf_sha256/: Cargo.toml  README.md
rs/webbuf_sha256/src/: lib.rs
rs/webbuf_slhdsa/: Cargo.toml
rs/webbuf_slhdsa/src/: lib.rs
rs/webbuf_x25519/: Cargo.toml  wasm-pack-bundler.zsh
rs/webbuf_x25519/src/: lib.rs
ts/: .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml
ts/npm-webbuf/: README.md  package.json
ts/npm-webbuf-acb3/: README.md  package.json  pnpm-lock.yaml
ts/npm-webbuf-acb3/test/: audit.test.ts
ts/npm-webbuf-acb3dh/: README.md  package.json  pnpm-lock.yaml
ts/npm-webbuf-acb3dh/test/: audit.test.ts
ts/npm-webbuf-acb3p256dh/: README.md  package.json
ts/npm-webbuf-acb3p256dh/src/: index.ts
ts/npm-webbuf-acb3p256dh/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-acs2/: package.json  pnpm-lock.yaml
ts/npm-webbuf-acs2/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-acs2dh/: README.md  package.json  pnpm-lock.yaml
ts/npm-webbuf-acs2dh/src/: index.ts
ts/npm-webbuf-acs2dh/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-acs2p256dh/: README.md  package.json
ts/npm-webbuf-acs2p256dh/src/: index.ts
ts/npm-webbuf-acs2p256dh/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-aescbc/: README.md  package.json  pnpm-lock.yaml
ts/npm-webbuf-aescbc/test/: audit.test.ts
ts/npm-webbuf-aesgcm/: README.md  build-inline-wasm.ts  package.json
ts/npm-webbuf-aesgcm-mlkem/: README.md  package.json
ts/npm-webbuf-aesgcm-mlkem/src/: index.ts
ts/npm-webbuf-aesgcm-mlkem/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-aesgcm-p256dh/: LICENSE  README.md  package.json
ts/npm-webbuf-aesgcm-p256dh-mlkem/: README.md  package.json
ts/npm-webbuf-aesgcm-p256dh-mlkem/src/: index.ts
ts/npm-webbuf-aesgcm-p256dh-mlkem/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-aesgcm-p256dh/src/: index.ts
ts/npm-webbuf-aesgcm-p256dh/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-aesgcm-x25519dh-mlkem/: README.md  package.json
ts/npm-webbuf-aesgcm-x25519dh-mlkem/src/: index.ts
ts/npm-webbuf-aesgcm-x25519dh-mlkem/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-aesgcm/src/: index.ts
ts/npm-webbuf-aesgcm/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-blake3/: README.md  package.json
ts/npm-webbuf-blake3/src/: index.ts
ts/npm-webbuf-blake3/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-ed25519/: README.md  build-inline-wasm.ts  package.json
ts/npm-webbuf-ed25519/src/: index.ts
ts/npm-webbuf-ed25519/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-fixedbuf/: README.md  package.json  pnpm-lock.yaml
ts/npm-webbuf-fixedbuf/src/: fixedbuf.ts
ts/npm-webbuf-fixedbuf/test/: audit.test.ts
ts/npm-webbuf-mldsa/: README.md  build-inline-wasm.ts  package.json
ts/npm-webbuf-mldsa/src/: index.ts
ts/npm-webbuf-mldsa/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-mlkem/: README.md  build-inline-wasm.ts  package.json
ts/npm-webbuf-mlkem/src/: index.ts
ts/npm-webbuf-mlkem/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-numbers/: README.md  package.json  pnpm-lock.yaml
ts/npm-webbuf-numbers/src/: index.ts
ts/npm-webbuf-numbers/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-p256/: README.md  build-inline-wasm.ts  package.json
ts/npm-webbuf-p256/src/: index.ts
ts/npm-webbuf-p256/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-pbkdf2-sha256/: README.md  build-inline-wasm.ts  package.json
ts/npm-webbuf-pbkdf2-sha256/src/: index.ts
ts/npm-webbuf-pbkdf2-sha256/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-ripemd160/: README.md  build-inline-wasm.ts  package.json  pnpm-lock.yaml
ts/npm-webbuf-ripemd160/test/: audit.test.ts
ts/npm-webbuf-rw/: README.md  package.json  pnpm-lock.yaml
ts/npm-webbuf-rw/src/: buf-reader.ts
ts/npm-webbuf-rw/test/: audit.test.ts  buf-reader.test.ts  buf-writer.test.ts  index.test.ts
ts/npm-webbuf-secp256k1/: README.md  package.json  pnpm-lock.yaml
ts/npm-webbuf-secp256k1/test/: audit.test.ts
ts/npm-webbuf-sha256/: README.md  build-inline-wasm.ts  package.json  pnpm-lock.yaml
ts/npm-webbuf-sha256/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-sig-ed25519-mldsa/: README.md  package.json
ts/npm-webbuf-sig-ed25519-mldsa/src/: index.ts
ts/npm-webbuf-sig-ed25519-mldsa/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-slhdsa/: README.md  build-inline-wasm.ts  package.json
ts/npm-webbuf-slhdsa/src/: index.ts
ts/npm-webbuf-slhdsa/test/: audit.test.ts  index.test.ts
ts/npm-webbuf-webbuf/: README.md  package.json  pnpm-lock.yaml
ts/npm-webbuf-webbuf/src/: webbuf.ts
ts/npm-webbuf-webbuf/test/: index.test.ts
ts/npm-webbuf-x25519/: README.md  build-inline-wasm.ts  package.json
ts/npm-webbuf-x25519/src/: index.ts
ts/npm-webbuf-x25519/test/: audit.test.ts  index.test.ts
ts/npm-webbuf/src/: index.ts
(+64 files in other folders)
