[workspace]
members = [
    "webbuf",
    "webbuf_aescbc",
    "webbuf_blake3",
    "webbuf_ripemd160",
    "webbuf_secp256k1",
    "webbuf_sha256",
]
resolver = "2"

[workspace.package]
version = "0.13.0"

[patch.crates-io]
webbuf = { path = "./webbuf" }
webbuf_aescbc = { path = "./webbuf_aescbc" }
webbuf_blake3 = { path = "./webbuf_blake3" }
webbuf_ripemd160 = { path = "./webbuf_ripemd160" }
webbuf_secp256k1 = { path = "./webbuf_secp256k1" }
webbuf_sha256 = { path = "./webbuf_sha256" }
