[workspace]
members = [
    "webbuf",
    "webbuf_aescbc",
    "webbuf_aesgcm",
    "webbuf_blake3",
    "webbuf_mldsa",
    "webbuf_mlkem",
    "webbuf_p256",
    "webbuf_pbkdf2_sha256",
    "webbuf_ripemd160",
    "webbuf_secp256k1",
    "webbuf_sha256",
    "webbuf_slhdsa",
    "webbuf_x25519",
    "webbuf_ed25519",
]
resolver = "2"

[workspace.package]
version = "0.15.1"

[patch.crates-io]
webbuf = { path = "./webbuf" }
webbuf_aescbc = { path = "./webbuf_aescbc" }
webbuf_aesgcm = { path = "./webbuf_aesgcm" }
webbuf_blake3 = { path = "./webbuf_blake3" }
webbuf_mldsa = { path = "./webbuf_mldsa" }
webbuf_mlkem = { path = "./webbuf_mlkem" }
webbuf_p256 = { path = "./webbuf_p256" }
webbuf_pbkdf2_sha256 = { path = "./webbuf_pbkdf2_sha256" }
webbuf_ripemd160 = { path = "./webbuf_ripemd160" }
webbuf_secp256k1 = { path = "./webbuf_secp256k1" }
webbuf_sha256 = { path = "./webbuf_sha256" }
webbuf_slhdsa = { path = "./webbuf_slhdsa" }
webbuf_x25519 = { path = "./webbuf_x25519" }
webbuf_ed25519 = { path = "./webbuf_ed25519" }
