[package]
name = "webbuf"
version.workspace = true
edition = "2021"
authors = ["Identellica LLC"]
description = "A Rust library for fast base64 and hex encoding/decoding"
license = "MIT"
repository = "https://github.com/identellica/webbuf"
homepage = "https://github.com/identellica/webbuf"
readme = "README.md"
keywords = ["base64", "hex", "encoding", "performance", "web"]
categories = ["encoding"]

[dependencies]
base64 = "0.22.1"
hex = "0.4"

[lib]
crate-type = ["cdylib"]  # Required for generating WebAssembly bindings later if needed

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true


