[package]
name = "webbuf_ed25519"
description = "Ed25519 PureEdDSA (RFC 8032) for WebBuf with optional WASM support."
version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Astrohacker"]
repository = "https://github.com/identellica/webbuf"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
ed25519-dalek = { version = "=2.2.0", default-features = false, features = [
    "fast",
    "zeroize",
] }
curve25519-dalek = { version = "=4.1.3", default-features = false, features = [
    "zeroize",
    "precomputed-tables",
] }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
hex-literal = "0.4.1"
hex = "0.4.3"
